RESOLVED FIXED240610
REGRESSION (r294160): Occasional infinite loops under updateLayersForInteractionRegions
https://bugs.webkit.org/show_bug.cgi?id=240610
Summary REGRESSION (r294160): Occasional infinite loops under updateLayersForInteract...
Tim Horton
Reported 2022-05-18 16:27:25 PDT
REGRESSION (r294160): Occasional infinite loops under updateLayersForInteractionRegions
Attachments
Patch (3.83 KB, patch)
2022-05-18 16:30 PDT, Tim Horton
ews-feeder: commit-queue-
Tim Horton
Comment 1 2022-05-18 16:30:33 PDT
Tim Horton
Comment 2 2022-05-18 16:30:35 PDT
Tim Horton
Comment 3 2022-05-18 16:32:04 PDT
I will figure out the changelog shenanigans.
Wenson Hsieh
Comment 4 2022-05-18 16:35:22 PDT
Comment on attachment 459560 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=459560&action=review Seems reasonable to me! > Source/WebCore/platform/graphics/IntRectHash.h:49 > + static WebCore::IntRect emptyValue() { return { -2, -2, -2, -2 }; } Out of curiosity, is there a reason why we opt for this value? (CoreGraphics has a notion of `CGRectNull` that's something along the lines of { 0, 0, ∞, ∞ }, for instance)
Wenson Hsieh
Comment 5 2022-05-18 16:39:31 PDT
Comment on attachment 459560 [details] Patch (Chris, Tim and I discussed this on Slack and agreed to go with a separate hashtraits object that supports empty rects)
Tim Horton
Comment 6 2022-05-18 16:58:00 PDT
(In reply to Wenson Hsieh from comment #5) > Comment on attachment 459560 [details] > Patch > > (Chris, Tim and I discussed this on Slack and agreed to go with a separate > hashtraits object that supports empty rects) Rather, I am just going to change my code to not emit empty rects.
Tim Horton
Comment 7 2022-05-18 19:49:34 PDT
EWS
Comment 8 2022-05-18 21:10:38 PDT
Committed r294467 (250729@main): <https://commits.webkit.org/250729@main> Reviewed commits have been landed. Closing PR #761 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.